--- a/devops-pipeline.yaml
+++ b/devops-pipeline.yaml
@@ -4,16 +4,65 @@ name: $(date:yyyyMMdd)$(rev:.rr)
 
 stages:
   - stage: 'build'
-    displayName: 'build-mvc' # string literal
-    jobs: 
-      - jobs:
-        displayName: ''
+    condition: succeeded()
+    displayName: 'build-mvc'
+    jobs:
+      - job:
+        condition: succeeded()
+        displayName: 'build-process'
         pool:
-          vmImage: 'ubuntu.16-04'
+          vmImage: 'ubuntu-16.04'
         steps:
-          - step: 
-            displayName:
-            - script: |
-                echo 'Hello Pipeline'
+          - script: |
+              echo 'build passed...'
+
+  - stage: 'test'
+    condition: succeeded()
+    displayName: 'test-mvc'
+    jobs:
+      - job:
+        condition: succeeded()
+        displayName: 'test-process'
+        pool:
+          vmImage: 'ubuntu-16.04'
+        steps:
+          - script: |
+              echo 'test passed...'
+
+  - stage: 'pack'
+    condition: succeeded()
+    displayName: 'pack-mvc'
+    jobs:
+      - job:
+        condition: succeeded()
+        displayName: 'pack-process'
+        pool:
+          vmImage: 'ubuntu-16.04'
+        steps:
+          - script: |
+              echo 'pack passed...' 
+
+  - stage: 'deploy'
+    condition: succeeded()
+    displayName: 'deploy-mvc'
+    jobs:
+      - job:
+        condition: succeeded()
+        displayName: 'deploy-process'
+        pool:
+          vmImage: 'ubuntu-16.04'
+        steps:
+          - script: |
+              echo 'deploy passed...'
+
+
+
+
+triggers:
+  - branches:
+      include:
+        - master
+
+variable:
 
 
