--- a/devops-pipeline.yaml
+++ b/devops-pipeline.yaml
@@ -14,7 +14,7 @@ stages:
           vmImage: 'ubuntu-16.04'
         steps:
           - script: |
-              echo 'build passed...'
+              dotnet build
 
   - stage: 'test'
     condition: succeeded()
@@ -27,10 +27,12 @@ stages:
           vmImage: 'ubuntu-16.04'
         steps:
           - script: |
-              echo 'test passed...'
+              dotnet test
 
   - stage: 'pack'
     condition: succeeded()
+    dependsOn:
+      - test
     displayName: 'pack-mvc'
     jobs:
       - job:
@@ -40,10 +42,12 @@ stages:
           vmImage: 'ubuntu-16.04'
         steps:
           - script: |
-              echo 'pack passed...' 
+              dotnet publish 
 
   - stage: 'deploy'
     condition: succeeded()
+    dependsOn:
+      - test:
     displayName: 'deploy-mvc'
     jobs:
       - job:
