--- a/devops-pipeline.yaml
+++ b/devops-pipeline.yaml
@@ -61,7 +61,7 @@ stages:
           vmImage: 'ubuntu-16.04'
         steps:
           - script: |
-              echo 'deploy passed...'
+              echo 'working ont'
 
 trigger:
   branches:
