--- a/devops-pipeline.yaml
+++ b/devops-pipeline.yaml
@@ -31,7 +31,7 @@ stages:
           vmImage: 'ubuntu-16.04'
         steps:
           - script: |
-              dotnet test
+              dotnet test -p:CollectCoverage=true
 
   - stage: 'pack'
     condition: succeeded()
