--- a/devops-pipeline.yaml
+++ b/devops-pipeline.yaml
@@ -31,8 +31,8 @@ stages:
           vmImage: 'ubuntu-16.04'
         steps:
           - script: |
-              dotnet tool install --global sonarscanner
-              dotnet sonarscanner begin /k:"devopsworld" /o:"vitrv" /d:sonar.login="69cacea30ac715bf84e3d6692e6cd8013e486f16" 
+              dotnet tool install --global dotnet-sonarscanner
+              dotnet sonarscanner begin /k:"devopsworld" /o:"vitrv" /d:sonar.login="69cacea30ac715bf84e3d6692e6cd8013e486f16" /d:sonar.host.url="https//:sonarcloud.io"
               dotnet build
               dotnet test -p:CollectCoverage=true
               dotnet sonarscanner end /d:sonar.login="69cacea30ac715bf84e3d6692e6cd8013e486f16" 
