--- a/devops-pipeline.yaml
+++ b/devops-pipeline.yaml
@@ -30,6 +30,10 @@ stages:
         pool:
           vmImage: 'ubuntu-16.04'
         steps:
+          - task: UseDotNet@2
+            displayName: 'dotnet installer'
+            inputs:
+              version: '2.2.401'
           - script: |
               dotnet tool install --global dotnet-sonarscanner
               dotnet sonarscanner begin /k:"devopsworld" /o:"vitrv" /d:sonar.login="69cacea30ac715bf84e3d6692e6cd8013e486f16" /d:sonar.host.url="https//:sonarcloud.io"
