--- a/devops-pipeline.yaml
+++ b/devops-pipeline.yaml
@@ -38,8 +38,18 @@ stages:
               dotnet tool install --global dotnet-sonarscanner
               dotnet sonarscanner begin /k:"devopsworld" /o:"vitrv" /d:sonar.login="69cacea30ac715bf84e3d6692e6cd8013e486f16" /d:sonar.host.url="https://sonarcloud.io"
               dotnet build
-              dotnet test -p:CollectCoverage=true
+              dotnet test --logger trx /p:CollectCoverage=true /p:CoverletOutput=TestResults/ /p:CoverletOutputFormat=\"cobertura,opencover\" /p:Exclude=[xunit*]*
               dotnet sonarscanner end /d:sonar.login="69cacea30ac715bf84e3d6692e6cd8013e486f16" 
+          - task: PublishTestResults@2
+            displayName: 'publish result::unit-test'
+            inputs:
+              testRunner: VSTest
+              testResultsFiles: '**/*.trx'
+          - task: PublishCodeCoverageResults@1
+            displayName: 'publish result::code-coverage'
+            inputs:
+              codeCoverageTool: cobertura
+              summaryFileLocation: '**/coverage.cobertura.xml'
 
   - stage: 'pack'
     condition: succeeded()
