--- a/devops-pipeline.yaml
+++ b/devops-pipeline.yaml
@@ -1,110 +1,104 @@
---- 
-name: "$(date:yyyyMMdd)$(rev:.rr)"
-stages: 
-  - 
+# devopsworld - pipline
+
+name: $(date:yyyyMMdd)$(rev:.rr)
+
+stages:
+  - stage: 'build'
     condition: succeeded()
-    displayName: build-mvc
-    jobs: 
-      - 
+    displayName: 'build-mvc'
+    jobs:
+      - job:
         condition: succeeded()
-        displayName: build-process
-        job: ~
-        pool: 
-          vmImage: ubuntu-16.04
-        steps: 
-          - 
-            displayName: "dotnet installer"
-            inputs: 
-              version: "2.2.401"
-            task: UseDotNet@2
-          - 
-            script: "dotnet build\n"
-    stage: build
-  - 
+        displayName: 'build-process'
+        pool:
+          vmImage: 'ubuntu-16.04'
+        steps:
+          - task: UseDotNet@2
+            displayName: 'dotnet installer'
+            inputs:
+              version: '2.2.401'
+          - script: |
+              dotnet build
+
+  - stage: 'test'
     condition: succeeded()
-    displayName: test-mvc
-    jobs: 
-      - 
+    displayName: 'test-mvc'
+    jobs:
+      - job:
         condition: succeeded()
-        displayName: test-process
-        job: ~
-        pool: 
-          vmImage: ubuntu-16.04
-        steps: 
-          - 
-            displayName: "dotnet installer"
-            inputs: 
-              version: "2.2.401"
-            task: UseDotNet@2
-          - 
-            script: "dotnet tool install --global dotnet-sonarscanner\n\
-                dotnet sonarscanner begin /k:\"devopsworld\" /o:\"vitrv\" /d:sonar.login=\"69cacea30ac715bf84e3d6692e6cd8013e486f16\" /d:sonar.host.url=\"https://sonarcloud.io\"\n\
-                dotnet build\n\
-                dotnet test --logger trx /p:CollectCoverage=true /p:CoverletOutput=TestResults/ /p:CoverletOutputFormat=\\\"cobertura,opencover\\\" /p:Exclude=[xunit*]*\n\
-                dotnet sonarscanner end /d:sonar.login=\"69cacea30ac715bf84e3d6692e6cd8013e486f16\" \n"
-          - 
-            displayName: "publish result::unit-test"
-            inputs: 
-              testResultsFiles: "**/*.trx"
+        displayName: 'test-process'
+        pool:
+          vmImage: 'ubuntu-16.04'
+        steps:
+          - task: UseDotNet@2
+            displayName: 'dotnet installer'
+            inputs:
+              version: '2.2.401'
+          - script: |
+              dotnet tool install --global dotnet-sonarscanner
+              dotnet sonarscanner begin /k:"devopsworld" /o:"vitrv" /d:sonar.login="69cacea30ac715bf84e3d6692e6cd8013e486f16" /d:sonar.host.url="https://sonarcloud.io"
+              dotnet build
+              dotnet test --logger trx /p:CollectCoverage=true /p:CoverletOutput=TestResults/ /p:CoverletOutputFormat=\"cobertura,opencover\" /p:Exclude=[xunit*]*
+              dotnet sonarscanner end /d:sonar.login="69cacea30ac715bf84e3d6692e6cd8013e486f16" 
+          - task: PublishTestResults@2
+            displayName: 'publish result::unit-test'
+            inputs:
               testRunner: VSTest
-            task: PublishTestResults@2
-          - 
-            displayName: "publish result::code-coverage"
-            inputs: 
+              testResultsFiles: '**/*.trx'
+          - task: PublishCodeCoverageResults@1
+            displayName: 'publish result::code-coverage'
+            inputs:
               codeCoverageTool: cobertura
-              summaryFileLocation: "**/coverage.cobertura.xml"
-            task: PublishCodeCoverageResults@1
-    stage: test
-  - 
+              summaryFileLocation: '**/coverage.cobertura.xml'
+
+  - stage: 'pack'
     condition: succeeded()
-    dependsOn: 
+    dependsOn:
       - test
-    displayName: pack-mvc
-    jobs: 
-      - 
+    displayName: 'pack-mvc'
+    jobs:
+      - job:
         condition: succeeded()
-        displayName: pack-process
-        job: ~
-        pool: 
-          vmImage: ubuntu-16.04
-        steps: 
-          - 
-            displayName: "docker login"
+        displayName: 'pack-process'
+        pool:
+          vmImage: 'ubuntu-16.04'
+        steps:
+          - task: Docker@2
             inputs: 
-              command: login
-              containerRegistry: docker
-            task: Docker@2
-          - 
-            script: |
-                docker image build --file Dockerfile --tag devopsworld .
-                docker image tag devopsworld lncatano/devopsworld
-                docker push lncatano/devopsworld
-          - 
-            displayName: "docker login"
-            inputs: 
-              command: logout
-              containerRegistry: docker
-            task: Docker@2
-    stage: pack
-  - 
+              command: 'login'
+              containerRegistry: 'docker'
+            displayName: 'docker login'
+          - script: |
+              docker image build --file Dockerfile --tag devopsworld .
+              docker image tag devopsworld lncatano/devopsworld
+              docker push lncatano/devopsworld
+          - task: Docker@2
+            inputs:
+              command: 'logout'
+              containerRegistry: 'docker'
+            displayName: 'docker login'
+
+  - stage: 'deploy'
     condition: succeeded()
-    dependsOn: 
+    dependsOn:
       - test
-    displayName: deploy-mvc
-    jobs: 
-      - 
+    displayName: 'deploy-mvc'
+    jobs:
+      - job:
         condition: succeeded()
-        displayName: deploy-process
-        job: ~
-        pool: 
-          vmImage: ubuntu-16.04
-        steps: 
-          - 
-            script: "echo 'working ont'\n"
-    stage: deploy
-trigger: 
-  branches: 
-    include: 
-      - master
-variables: 
-  sonar: 69cacea30ac715bf84e3d6692e6cd8013e486f16
+        displayName: 'deploy-process'
+        pool:
+          vmImage: 'ubuntu-16.04'
+        steps:
+          - script: |
+              echo 'working ont'
+
+trigger:
+  branches:
+    include:
+    - master
+
+variables:
+  sonar: '69cacea30ac715bf84e3d6692e6cd8013e486f16'
+
+
