--- a/devops-pipeline.yaml
+++ b/devops-pipeline.yaml
@@ -79,7 +79,7 @@ stages:
             displayName: 'docker login'
 
   - stage: 'deploy'
-    condition: succeeded()
+    condition: succeeded('pack')
     dependsOn:
       - test
     displayName: 'deploy-mvc'
